--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
   },
   "dependencies": {
     "axios": "^0.16.2",
+    "bcrypt": "^1.0.3",
     "body-parser": "^1.17.2",
+    "connect-mongo": "^2.0.1",
     "express": "^4.15.4",
     "express-session": "^1.10.1",
     "mongoose": "^4.11.7",
